Fix horizontal map clipping on window resize by adding overflow visible to svg

--- a/src/app.css
+++ b/src/app.css
@@ -520,6 +520,7 @@ mark, .highlight {
 #map-svg {
     width: 100%;
     height: 100%;
+    overflow: visible;
 }
 
 .scrolly-text {
